--- a/snake.html
+++ b/snake.html
@@ -9,6 +9,11 @@
     <canvas id="canvas" width="400" height="400"></canvas>
     <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script>
+        // Определяем переменные canvas, ctx, width, height
+        let canvas = document.getElementById("canvas");
+        let ctx = canvas.getContext("2d");
+        let width = canvas.width;
+        let height = canvas.height;
         
     </script>
 </body>
