--- a/snake.html
+++ b/snake.html
@@ -15,6 +15,12 @@
         let width = canvas.width;
         let height = canvas.height;
         
+//         Делим холст на ячейки
+//         Для создания ячеек создадим переменные
+        let blockSize = 10;
+        let widthInBlocks = width / blockSize;
+        let heightInBlocks = height / blockSize;        
+        
     </script>
 </body>
 </html>
