Создали переменную score

--- a/snake.html
+++ b/snake.html
@@ -19,7 +19,11 @@
 //         Для создания ячеек создадим переменные
         let blockSize = 10;
         let widthInBlocks = width / blockSize;
-        let heightInBlocks = height / blockSize;        
+        let heightInBlocks = height / blockSize;    
+
+        // Создаем переменную score
+        let score = 0;
+         
         
     </script>
 </body>
