--- a/snake.html
+++ b/snake.html
@@ -37,7 +37,13 @@
         };
 
         // Отображение счета пишем функцию drawScore
-        
+        let drawScore = function () {
+            ctx.font = "20px Courier";
+            ctx.fillStyle = "Black";
+            ctx.textAlign = "left";
+            
+        }
+
 
     </script>
 </body>
