--- a/snake.html
+++ b/snake.html
@@ -30,10 +30,10 @@
         // Рисуем рамку
         let drawBorder = function () {
             ctx.fillStyle = "gray";
-            ctx.fillRect = (0,0,width,blockSize);
-            ctx.fillRect = (0,height-blockSize,width,blockSize);
-            ctx.fillRect = (0,0,blockSize,height);
-            ctx.fillRect = (width-blockSize,0,blockSize,height);
+            ctx.fillRect = (0, 0, width, blockSize);
+            ctx.fillRect = (0, height - blockSize, width, blockSize);
+            ctx.fillRect = (0, 0, blockSize, height);
+            ctx.fillRect = (width - blockSize, 0, blockSize, height);
         };
 
         // Отображение счета пишем функцию drawScore
@@ -41,10 +41,21 @@
             ctx.font = "20px Courier";
             ctx.fillStyle = "Black";
             ctx.textAlign = "left";
-            
-        }
+            ctx.textBaseline = "top";
+            ctx.fillText("Счет: " + score, blockSize, blockSize);
+        };
 
+        // Конец игры
+        let gameOver = function () {
+            clearInterval(intervalId);
+            ctx.font = "60px Courier";
+            ctx.fillStyle = "Black";
+            ctx.textAlign = "center";
+            ctx.textBaseline = "middle";
+            ctx.fillText("Конец игры", width / 2, height / 2);
+        };
 
+        
     </script>
 </body>
 
