--- a/snake.html
+++ b/snake.html
@@ -30,10 +30,10 @@
         // Рисуем рамку
         let drawBorder = function () {
             ctx.fillStyle = "gray";
-            ctx.fillRect = (0, 0, width, blockSize);
-            ctx.fillRect = (0, height - blockSize, width, blockSize);
-            ctx.fillRect = (0, 0, blockSize, height);
-            ctx.fillRect = (width - blockSize, 0, blockSize, height);
+            ctx.fillRect(0, 0, width, blockSize);
+            ctx.fillRect(0, height - blockSize, width, blockSize);
+            ctx.fillRect(0, 0, blockSize, height);
+            ctx.fillRect(width - blockSize, 0, blockSize, height);
         };
 
         // Отображение счета пишем функцию drawScore
@@ -55,7 +55,7 @@
             ctx.fillText("Конец игры", width / 2, height / 2);
         };
 
-        
+                
     </script>
 </body>
 
