--- a/snake.html
+++ b/snake.html
@@ -55,7 +55,14 @@
             ctx.fillText("Конец игры", width / 2, height / 2);
         };
 
-                
+    // Анимация счета добавление своего счета
+    let intervalIdMay = function () {
+        ctx.clearRect(0,0,width,height);
+        score++;
+        drawScore();
+    };
+    setInterval(intervalIdMay,100);
+    
     </script>
 </body>
 
