--- a/snake.html
+++ b/snake.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
+    <canvas id="canvas" width="800" height="500"></canvas>
     <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
         crossorigin="anonymous"></script>
     <script>
@@ -26,6 +26,7 @@
 
         // Создаем переменную score
         let score = 0;
+        let interval = 100;
 
         // Рисуем рамку
         let drawBorder = function () {
@@ -138,6 +139,7 @@
 
             if (newHead.equal(apple.position)) {
                 score++;
+                interval--;
                 apple.move();
             } else {
                 this.segments.pop();
@@ -202,14 +204,16 @@
         let apple = new Apple();
 
         // Запускаем функцию анимации через setInterval
+                
         let intervalId = setInterval(function () {
+            
             ctx.clearRect(0, 0, width, height);
             drawScore();
             snake.move();
             snake.draw();
             apple.draw();
             drawBorder();
-        }, 100);
+        }, interval);
 
         // Управление змейкой с клавиатуры
         // Обработчик события keydown
