--- a/snake.html
+++ b/snake.html
@@ -48,12 +48,19 @@
 
         // Конец игры
         let gameOver = function () {
-            clearInterval(intervalId);
+
             ctx.font = "60px Courier";
             ctx.fillStyle = "Black";
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
             ctx.fillText("Конец игры", width / 2, height / 2);
+
+            snake.draw();
+            apple.draw();
+            drawBorder();
+
+            clearTimeout(timeoutId);
+
         };
 
         // Рисуем окружность
@@ -139,7 +146,7 @@
 
             if (newHead.equal(apple.position)) {
                 score++;
-                interval--;
+                interval = interval - score;
                 apple.move();
             } else {
                 this.segments.pop();
@@ -204,16 +211,22 @@
         let apple = new Apple();
 
         // Запускаем функцию анимации через setInterval
-                
-        let intervalId = setInterval(function () {
-            
+
+        let inter = function () {
+
             ctx.clearRect(0, 0, width, height);
             drawScore();
             snake.move();
             snake.draw();
             apple.draw();
             drawBorder();
-        }, interval);
+
+            let timeoutId = setTimeout(inter, interval);
+
+        };
+
+        inter();
+
 
         // Управление змейкой с клавиатуры
         // Обработчик события keydown
